--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="src/App.css" rel="stylesheet">
-  <title>portfolio</title>
+  <title>port_folio</title>
 </head>
 
 <body class="bg-mainbg h-full m-0">
